--- a/user-console/code-server/configs/v0_3_2.yaml
+++ b/user-console/code-server/configs/v0_3_2.yaml
@@ -1,7 +1,7 @@
-## @param image.registry Repository registry for the Docker image
-## @param image.repository Repository name for the Docker image
-## @param image.tag Image tag for the Docker image (immutable tags are recommended)
-## @param image.pullPolicy Image pull policy for the Docker image
+## @param image.registry Code Server image registry
+## @param image.repository Code Server image repository
+## @param image.tag Code Server image tag
+## @param image.pullPolicy Code Server image pull policy
 ##
 image:
   registry: "$(T9K_APP_IMAGE_REGISTRY)"
@@ -12,9 +12,9 @@ image:
 ## @param pvc Mount a PVC as Code Server workspace
 pvc: ""
 
-## @param resources.limits.cpu CPU limit for the App container
-## @param resources.limits.memory Memory limit for the App container
-## @param resources.limits."nvidia.com/gpu" NVIDIA GPU limit for the App container
+## @param resources.limits.cpu CPU limit for Code Server container
+## @param resources.limits.memory Memory limit for Code Server container
+## @param resources.limits."nvidia.com/gpu" NVIDIA GPU limit for Code Server container
 resources:
   limits:
     cpu: 16
