--- a/user-console/stable-diffusion-webui-aki/configs/v0_2_0.yaml
+++ b/user-console/stable-diffusion-webui-aki/configs/v0_2_0.yaml
@@ -1,15 +1,17 @@
-## @param image.registry Docker registry for the image
-## @param image.repository Repository name for the image
-## @param image.tag Tag for the image version
+## @param image.registry Stable Diffusion Webui image registry
+## @param image.repository Stable Diffusion Webui image repository
+## @param image.tag Stable Diffusion Webui image tag
+## @param image.pullPolicy Stable Diffusion Webui image pull policy
 ##
 image:
   registry: "$(T9K_APP_IMAGE_REGISTRY)"
   repository: "$(T9K_APP_IMAGE_NAMESPACE)/stable-diffusion-webui"
   tag: "20240514"
+  pullPolicy: IfNotPresent
 
-## @param resources.limits.cpu CPU limit for Kubernetes resources
-## @param resources.limits.memory Memory limit for Kubernetes resources
-## @param resources.limits."nvidia.com/gpu" NVIDIA GPU limit for Kubernetes resources
+## @param resources.limits.cpu CPU limit for Stable Diffusion Webui container
+## @param resources.limits.memory Memory limit for Stable Diffusion Webui container
+## @param resources.limits."nvidia.com/gpu" NVIDIA GPU limit for Stable Diffusion Webui container
 ##
 resources:
   limits:
@@ -17,12 +19,14 @@ resources:
     memory: 64Gi
     nvidia.com/gpu: 1
 
-## @param persistence.size Size of the persistent volume claim
-## @param persistence.storageClass Storage class for the persistent volume claim
-## @param persistence.accessModes Access modes for the persistent volume claim
+## @param persistence.size Size of the PVC
+## @param persistence.storageClass Storage class for the PVC
+## @param persistence.accessModes Access modes for the PVC
+## @param persistence.existingClaim Name of an existing PVC to use
 ##
 persistence:
-  size: 32Gi
+  size: 64Gi
   storageClass: ""
   accessModes:
   - ReadWriteOnce
+  existingClaim: ""
