--- a/user-console/fastgpt/configs/v0_1_1.yaml
+++ b/user-console/fastgpt/configs/v0_1_1.yaml
@@ -1,14 +1,33 @@
+## @param image.registry FastGPT image registry
+## @param image.repository FastGPT image repository
+## @param image.tag FastGPT image tag
+## @param image.pullPolicy FastGPT image pull policy
+##
 image:
   registry: "$(T9K_APP_IMAGE_REGISTRY)"
   repository: "$(T9K_APP_IMAGE_NAMESPACE)/fastgpt"
   tag: "v4.8.12"
   pullPolicy: IfNotPresent
 
+## @param resources.limits.cpu CPU limit for FastGPT container
+## @param resources.limits.memory Memory limit for FastGPT container
+##
 resources:
   limits:
     cpu: 1
     memory: 2Gi
 
+## @param app.defaultRootPassword Default root password for FastGPT
+## @param app.openAiBaseUrl Base URL for OpenAI API
+## @param app.chatApiKey API key for chat service
+## @param app.dbMaxLink Maximum database connections
+## @param app.tokenKey Token encryption key
+## @param app.rootKey Root access key
+## @param app.fileTokenKey File token key
+## @param app.logLevel Application log level
+## @param app.storeLogLevel Storage log level
+## @param app.config Configuration for FastGPT
+##
 app:
   # 应用的设置，请参阅 https://github.com/labring/FastGPT/blob/main/files/docker/docker-compose-pgvector.yml#L94-L118
   defaultRootPassword: "123456"
@@ -85,47 +104,81 @@ app:
     #   charsPointsPrice: 0
 
 sandbox:
+
+  ## @param sandbox.image.registry Sandbox image registry
+  ## @param sandbox.image.repository Sandbox image repository
+  ## @param sandbox.image.tag Sandbox image tag
+  ## @param sandbox.image.pullPolicy Sandbox image pull policy
+  ##
   image:
     registry: "$(T9K_APP_IMAGE_REGISTRY)"
     repository: "$(T9K_APP_IMAGE_NAMESPACE)/fastgpt-sandbox"
     tag: "v4.8.12"
     pullPolicy: IfNotPresent
 
+  ## @param sandbox.resources.limits.cpu CPU limit for Sandbox container
+  ## @param sandbox.resources.limits.memory Memory limit for Sandbox container
+  ##
   resources:
     limits:
       cpu: 2
       memory: 4Gi
 
+## @param mongodb.enabled Enable/disable MongoDB installation
+## @param mongodb.architecture MongoDB deployment architecture
+## @param mongodb.replicaCount Number of MongoDB replicas
+## @param mongodb.replicaSetName MongoDB replica set name
+##
 mongodb:
-  # -- Enable or disable the built-in MangoDB
   enabled: true
+  architecture: replicaset
+  replicaCount: 1
+  replicaSetName: rs0
+
+  ## @param mongodb.image.registry MongoDB image registry
+  ## @param mongodb.image.repository MongoDB image repository
+  ## @param mongodb.image.tag MongoDB image tag
+  ##
   image:
     registry: "$(T9K_APP_IMAGE_REGISTRY)"
     repository: "$(T9K_APP_IMAGE_NAMESPACE)/mongodb"
     tag: 8.0.0-debian-12-r1
-  architecture: replicaset
-  replicaCount: 1
+
+  ## @param mongodb.auth.rootUser MongoDB root username
+  ## @param mongodb.auth.rootPassword MongoDB root password
+  ##
   auth:
     rootUser: root
     rootPassword: "123456"
-  replicaSetName: rs0
 
+  ## @param mongodb.persistence.enabled Enable persistence for MongoDB
+  ## @param mongodb.persistence.storageClass Storage class for MongoDB PVC
+  ## @param mongodb.persistence.size Size of MongoDB PVC
+  ##
   persistence:
     enabled: true
     storageClass: ""
     size: 2Gi 
 
+## @param postgresql.enabled Enable/disable PostgreSQL installation
+##
 postgresql:
-  # -- Enable or disable the built-in PostgreSQL
   enabled: true
+
+  ## @param postgresql.image.registry PostgreSQL image registry
+  ## @param postgresql.image.repository PostgreSQL image repository
+  ## @param postgresql.image.tag PostgreSQL image tag
+  ##
   image:
     registry: "$(T9K_APP_IMAGE_REGISTRY)"
     repository: "$(T9K_APP_IMAGE_NAMESPACE)/linuxsuren-pgvector"
     tag: v0.0.1
+  
+  ## @param postgresql.global.postgresql.auth.postgresPassword PostgreSQL admin password
+  ## @param postgresql.global.postgresql.auth.database Default PostgreSQL database name
+  ##
   global:
     postgresql:
       auth:
-        # -- The password of PostgreSQL, default username is `postgres`
         postgresPassword: postgres
-        # -- The default database of PostgreSQL
         database: postgres
