Update open-webui to support custom registry

--- a/user-console/open-webui/chart/charts/pipelines/templates/deployment.yaml
+++ b/user-console/open-webui/chart/charts/pipelines/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "pipelines.name" . }}
+  name: {{ include "pipelines.fullname" . }}
   labels:
     {{- include "pipelines.labels" . | nindent 4 }}
   {{- with .Values.annotations }}
@@ -31,7 +31,7 @@ spec:
       containers:
       - name: {{ .Chart.Name }}
         {{- with .Values.image }}
-        image: {{ .repository }}:{{ .tag | default $.Chart.AppVersion }}
+        image: {{ .registry }}/{{ .repository }}:{{ .tag | default $.Chart.AppVersion }}
         imagePullPolicy: {{ .pullPolicy }}
         {{- end }}
         ports:
