--- a/user-console/open-webui/chart/charts/pipelines/values.yaml
+++ b/user-console/open-webui/chart/charts/pipelines/values.yaml
@@ -7,7 +7,8 @@ annotations: {}
 podAnnotations: {}
 replicaCount: 1
 image:
-  repository: ghcr.io/open-webui/pipelines
+  registry: ghcr.io
+  repository: open-webui/pipelines
   tag: main
   pullPolicy: Always
 
