--- a/user-console/open-webui/chart/templates/statefulset.yaml
+++ b/user-console/open-webui/chart/templates/statefulset.yaml
@@ -44,6 +44,9 @@ spec:
         securityContext:
           {{- toYaml . | nindent 10 }}
         {{- end }}
+        {{- with .Values.resources }}
+        resources: {{- toYaml . | nindent 10 }}
+        {{- end }}
         volumeMounts:
         - name: data
           mountPath: /tmp/app-data
