--- a/user-console/db-gpt/chart/values.yaml
+++ b/user-console/db-gpt/chart/values.yaml
@@ -1,7 +1,7 @@
 image:
   registry: docker.io
   repository: t9kpublic/dbgpt-allinone
-  tag: "v0.6.1-3"
+  tag: "v0.6.2"
   pullPolicy: IfNotPresent
 
 dotenv:
