--- a/user-console/db-gpt/configs/v0_1_1.yaml
+++ b/user-console/db-gpt/configs/v0_1_1.yaml
@@ -6,7 +6,7 @@
 image:
   registry: "$(T9K_APP_IMAGE_REGISTRY)"
   repository: "$(T9K_APP_IMAGE_NAMESPACE)/dbgpt-allinone"
-  tag: "v0.6.1-4"
+  tag: "v0.6.2"
   pullPolicy: IfNotPresent
 
 ## @param dotenv.enabled Enable/disable environment variable configuration
