--- a/user-console/db-gpt/docker/Dockerfile
+++ b/user-console/db-gpt/docker/Dockerfile
@@ -1,3 +1,3 @@
-FROM t9kpublic/dbgpt-allinone:v0.6.1-1
+FROM eosphorosai/dbgpt-allinone:latest
 
-RUN pip install --no-cache-dir poetry fastapi==0.111.0 pydantic==2.7.4 pydantic_core==2.18.4
+RUN pip install --no-cache-dir poetry fastapi==0.111.0 pydantic==2.7.4 pydantic_core==2.18.4 fuzzywuzzy
