--- a/user-console/gpt-researcher/chart/templates/secret.yaml
+++ b/user-console/gpt-researcher/chart/templates/secret.yaml
@@ -6,19 +6,21 @@ metadata:
     {{- include "gpt-researcher.labels" . | nindent 4 }}
 type: Opaque
 data:
-  {{- if eq .Values.llm.provider "openai" }}
   OPENAI_API_KEY: {{ .Values.llm.apiKey | toString | b64enc | quote }}  
-  {{- end }}
-  {{- if eq .Values.retriever.provider "BingSearch" }}
+  {{- if eq .Values.retriever.provider "bing" }}
   BING_API_KEY: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
   {{- else if eq .Values.retriever.provider "google" }}
   GOOGLE_API_KEY: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
-  {{- else if eq .Values.retriever.provider "searx" }}
-  SEARX_URL: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
+  {{- else if eq .Values.retriever.provider "searchapi" }}
+  SEARCHAPI_API_KEY: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
   {{- else if eq .Values.retriever.provider "serpapi" }}
   SERPAPI_API_KEY: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
-  {{- else if eq .Values.retriever.provider "googleSerp" }}
+  {{- else if eq .Values.retriever.provider "serper" }}
   SERPER_API_KEY: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
-  {{- else if eq .Values.retriever.provider "tavily" }}
+  {{- else if eq .Values.retriever.provider "searx" }}
+  SEARX_URL: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
+  {{- else if eq .Values.retriever.provider "exa" }}
+  EXA_API_KEY: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
+  {{- else }}
   TAVILY_API_KEY: {{ .Values.retriever.apiKey | toString | b64enc | quote }}
   {{- end }}
