--- a/user-console/ollama/template.yaml
+++ b/user-console/ollama/template.yaml
@@ -12,8 +12,20 @@ template:
     # repo: "https://t9k.github.io/apps/"
     chart: "ollama"
     versions:
-    - version: 0.53.1
-      config: "file://$APP_DIR/configs/v0_53.yaml"
+    - version: 0.54.1
+      config: "file://$APP_DIR/configs/v0_54_1.yaml"
+      urls: []
+      readinessProbe:
+        resources:
+        - group: apps
+          version: v1
+          resource: deployments
+          name: "{{ .Release.Name }}"
+          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
+          desiredStatus: "True"
+      dependencies: {}
+    - version: 0.54.2
+      config: "file://$APP_DIR/configs/v0_54_2.yaml"
       urls: []
       readinessProbe:
         resources:
