Update vllm app

--- a/user-console/vllm/vllm/variations/metax/Chart.yaml
+++ b/user-console/vllm/vllm/variations/metax/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: vllm
+name: vllm-metax
 description: vLLM 是一个高吞吐量和内存高效的 LLM 推理和服务引擎。
 type: application
-version: 0.3.1
-appVersion: "v0.6.5"
+version: 0.3.0
+appVersion: "20241010"
