--- a/user-console/vllm/vllm/template.yaml
+++ b/user-console/vllm/vllm/template.yaml
@@ -24,3 +24,15 @@ template:
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
       dependencies: {}
+    - version: 0.3.1
+      config: "file://$APP_DIR/configs/v0_3_1.yaml"
+      urls: []
+      readinessProbe:
+        resources:
+        - group: tensorstack.dev
+          version: v1beta1
+          resource: mlservices
+          name: "{{ .Release.Name }}"
+          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
+          desiredStatus: "True"
+      dependencies: {}
