--- a/user-console/vllm/vllm/variations/enflame/template.yaml
+++ b/user-console/vllm/vllm/variations/enflame/template.yaml
@@ -1,16 +1,16 @@
 apiVersion: app.tensorstack.dev/v1beta1
 kind: Template
 metadata:
-  name: vllm-metax
-  displayName: vLLM (MetaX GPU)
+  name: vllm-enflame
+  displayName: vLLM (Enflame GCU)
   categories: ["AI"]
   description: "vLLM 是一个高吞吐量和内存高效的 LLM 推理和服务引擎。"
   icon: "file://$APP_DIR/icon.png"
 template:
   helm:
-    repo: "oci://registry.suanfeng.t9kcloud.cn/t9kcharts"
+    repo: "oci://registry.qingyang.t9kcloud.cn/t9kcharts"
     # repo: "https://t9k.github.io/apps/"
-    chart: "vllm-metax"
+    chart: "vllm-enflame"
     versions:
     - version: 0.3.0
       config: "file://$APP_DIR/configs/v0_3_0.yaml"
